--- a/netlify.toml
+++ b/netlify.toml
@@ -12,7 +12,4 @@
   # Fonksiyonlar için Node.js sürümünü ve paketleyiciyi belirtir.
   node_bundler = "esbuild"
 
-# Bu bölüm, TÜM fonksiyonların (*) ÇALIŞMA ZAMANI ayarlarını içerir.
-[functions."*"]
-  # Fonksiyonun zaman aşımı süresini 25 saniyeye çıkarır.
-  timeout = 25
+# Not: Zaman aşımı ayarı kaldırıldı. Flash model için varsayılan 10 saniye yeterlidir.
